Formatting fix for README

--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-This is the source code for my presenation "Writing Plugged-In Java EE Apps" I recently gave at
-JAXConf in San Francisco.  For a discussion of the code, see my blog entry here:
-http://blogs.steeplesoft.com/2012/07/writing-pluggable-java-ee-applications-the-explanation/
+This is the source code for my presenation "Writing Plugged-In Java EE Apps" I recently gave at JAXConf in San Francisco.  For a discussion of the code, see my blog entry here: http://blogs.steeplesoft.com/2012/07/writing-pluggable-java-ee-applications-the-explanation/
